# doc-processor

./: CMakeLists.txt  conanfile.txt  document.h  main.cpp  processor.cpp  processor.h  storage.cpp  storage.h
